# batch_labels

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  sku-labels.spec  skus.csv  test_main.py
.claude/: settings.local.json
.github/workflows/: build.yml
deploy/: build.py  release.py
src/batch_labels/: main.py  standalone.py
tests/: test_main.py
