[project]
name = "batch-labels"
version = "0.1.0"
description = "Batch ZPL label printer for Zebra printers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "python-multipart>=0.0.22",
    "ruff>=0.15.2",
    "dotenv>=0.9.9",
]

[project.scripts]
batch-labels = "main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
