[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/activate", "/build", "/dist"]

[tool.hatch.build.targets.wheel]
packages = ["src/batch_labels"]

[project]
name = "batch-labels"
version = "1.0.4"
description = "Batch ZPL label printer for Zebra printers"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "python-multipart>=0.0.22",
    "dotenv>=0.9.9",
    "platformdirs>=4.0",
    "zpl>=0.1.13",
]

[project.scripts]
batch-labels = "batch_labels.standalone:main"

[dependency-groups]
dev = [
    "hatchling>=1.27",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "pyinstaller>=6.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
release = "uv run python deploy/release.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
